fitcycle-percona-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  ports:
    - port: 3306
      name: http-fc-db
  selector:
    app: fitcycle
    tier: db
  clusterIP: None
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: db
    spec:
      containers:
      - image: percona:5.6
        name: fc-mysql
        ports:
        - containerPort: 3306
          name: fc-mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: fitcycle-persistent-storage
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-initdb
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        args: ["--collector.host-port=jaeger-collector.jaeger-infra.svc:14267"]
      volumes:
      - name: fitcycle-persistent-storage
        persistentVolumeClaim:
          claimName: fc-mysql-pv-claim
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-config
