fitcycle-server-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  ports:
    - port: 8000
      name: http-fc-web
      nodePort: 30440
  selector:
    app: fitcycle
    tier: app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-api
  labels:
    app: fitcycle
spec:
  ports:
    - name: http-fc
      protocol: TCP
      port: 5000
      nodePort: 30431
  selector:
    app: fitcycle
    tier: api
  type: NodePort
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: app
    spec:
      volumes:
      - name: varlog
        emptyDir: {}
      containers:
      - image: gcr.io/learning-containers-187204/web-server0901:latest
        name: fitcycle-server
        ports:
        - containerPort: 8000
          name: fitcycle-server
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: api-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: api
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: fitcycle
        tier: api
    spec:
      volumes:
      - name: fitcycle-apiserver-data 
        emptyDir: {}
      containers:
      - image: gcr.io/learning-containers-187204/api-server0901:latest
        name: api-server
        ports:
        - containerPort: 5000
          name: api-server
        volumeMounts:
        - mountPath: "/data"
          name: "fitcycle-apiserver-data"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        args: ["--collector.host-port=jaeger-collector.jaeger-infra.svc:14267"]
