app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
spec:
  rules:
    - host: HOSTNAME
      http:
        paths:
        - backend:
            serviceName: fitcycle-web
            servicePort: 8000
          path: /
        - backend:
            serviceName: fitcycle-api
            servicePort: 5000
          path: /api/v1.0/signups
