tempingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
spec:
  rules:
    - host: wrkshp-eab0ce3e-a7bb-11e8-8373-0e30cfacdab0.bfd7a751-b2f5-43a3-b2b3-0c82d6896aee.vke-user.com
      http:
        paths:
        - backend:
            serviceName: fitcycle-web
            servicePort: 8000
          path: /
        - backend:
            serviceName: fitcycle-api
            servicePort: 5000
          path: /api/v1.0/signups
